Bug 208021 - cap_proc.c includes psx header which in some situations mandates libpsx linkage
Summary: cap_proc.c includes psx header which in some situations mandates libpsx linkage
Status: RESOLVED CODE_FIX
Alias: None
Product: Tools
Classification: Unclassified
Component: libcap (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Andrew G. Morgan
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-01 19:44 UTC by Andrew G. Morgan
Modified: 2020-06-02 03:24 UTC (History)
0 users

See Also:
Kernel Version: n/a
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Andrew G. Morgan 2020-06-01 19:44:11 UTC
It remains the intention that libpsx be an optional linkage to help an application observe a process wide common security context. However, for
backward compatibility this is not required.

Unfortunately, the fact libcap/cap_proc.c includes a reference to the psx header file, some build environments automatically force this library to be linked.

I think the resolution is to locally introduce the prototype for the affected function in cap_proc.c and not rely on the libpsx header.

Note You need to log in before you can comment on or make changes to this bug.