Remove include dependency of libcap on libpsx.

While there is no explicit runtime dependency of libcap on libpsx
(only an optional one). There is some confusion about the need for
linkage from header analysis. As such, inline the prototype for
psx_load_syscalls() into libcap/cap_proc.go.

This addresses:

  https://bugzilla.kernel.org/show_bug.cgi?id=208021

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>